View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029112 | Open CASCADE | OCCT:Configuration | public | 2017-09-15 08:22 | 2018-06-29 21:19 |
Reporter | abv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029112: Configuration, Image_VideoRecorder - compilation fails on Ubuntu with libavutil 54.x (FFmpeg 2.7.6) | ||||
Description | Compilation of current OCCT master fails on Ubuntu 15 with FFmpeg 2.7.6 and libaviutil 54.27.100: the headers of the latter define macro PixelFormat which clashes with name of the field of the structure Image_VideoParams. A side note is that structure Image_VideoParams is defined in the same header with another class (Image_VideoRecorder.hxx) while by existing convention it should be placed in its own header. | ||||
Steps To Reproduce | Build on Ubuntu 15 with default FFmpeg. Note that Ubuntu 15.04/15.10 are not LTS releases and their support has been stopped a long time ago. | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR29112 has been created by abv. SHA-1: 648e7a3ef16b9b1fb35f6245224aa15c1fbb0bee Detailed log of new commits: Author: abv Date: Fri Sep 15 08:35:07 2017 +0300 0029112: Visualization - compilation fails on Ubuntu with libaviutil 54.x (FFmpeg 2.7.6) Offending macro is undefined to allow compilation with libaviutil 54.x |
|
Fix is pushed to CR29112, please review. Common testing is not needed as fix concerns only compilation on specific platform. |
|
+// this macro ais defined in headers of older versions of libaviutil Please fix misprints ais->is, libaviutil->avutil. Otherwise looks fine. |
|
Branch CR29112 has been updated forcibly by abv. SHA-1: d755b2e1563f3c85bf801d6d8b9ac6c434a228d9 |
|
Comments are corrected |
|
> 0029112: Visualization - compilation fails on Ubuntu with libaviutil 54.x (FFmpeg 2.7.6) The commit description still contains misprint. |
|
Could you clarify what I should do? |
|
Branch CR29112 has been updated forcibly by inv. SHA-1: ac109f6c5f62b7ccdb5d2365423a2d9941484725 |
|
Branch CR29112_1 has been created by abv. SHA-1: 69aabed899f10d71dda01e5c4b3c6a5ef6890aeb Detailed log of new commits: Author: abv Date: Fri Sep 15 08:35:07 2017 +0300 0029112: Visualization - compilation fails on Ubuntu with libavutil 54.x (FFmpeg 2.7.6) Offending macro is undefined to allow compilation with libavutil 54.x |
|
Corrected and rebased on current master, please consider for integration |
|
Combination - OCCT branch : CR29112_1 SHA-1: 69aabed899f10d71dda01e5c4b3c6a5ef6890aeb Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. http://jenkins-test-10.nnov.opencascade.com/view/CR29112_1-master-INV/ Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29112 has been deleted by kgv. SHA-1: ac109f6c5f62b7ccdb5d2365423a2d9941484725 |
|
Branch CR29112_1 has been deleted by kgv. SHA-1: 69aabed899f10d71dda01e5c4b3c6a5ef6890aeb |
occt: master 746f3d7a 2017-09-15 05:35:07 Committer: bugmaster Details Diff |
0029112: Visualization - compilation fails on Ubuntu with libavutil 54.x (FFmpeg 2.7.6) Offending macro is undefined to allow compilation with libavutil 54.x |
Affected Issues 0029112 |
|
mod - src/Image/Image_VideoRecorder.cxx | Diff File | ||
mod - src/Image/Image_VideoRecorder.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-09-15 08:22 | abv | New Issue | |
2017-09-15 08:22 | abv | Assigned To | => kgv |
2017-09-15 08:38 | git | Note Added: 0070558 | |
2017-09-15 08:39 | abv | Note Added: 0070559 | |
2017-09-15 08:39 | abv | Status | new => resolved |
2017-09-15 08:39 | abv | Steps to Reproduce Updated | |
2017-09-15 09:13 | kgv | Note Added: 0070560 | |
2017-09-15 09:13 | kgv | Assigned To | kgv => abv |
2017-09-15 09:13 | kgv | Status | resolved => assigned |
2017-09-15 09:13 | kgv | Product Version | => 7.2.0 |
2017-09-15 09:14 | kgv | Relationship added | child of 0025382 |
2017-09-15 09:16 | kgv | Category | OCCT:Visualization => OCCT:Configuration |
2017-09-15 09:16 | kgv | Summary | Visualization - compilation fails on Ubuntu with libaviutil 54.x (FFmpeg 2.7.6) => Configuration, Image_VideoRecorder - compilation fails on Ubuntu with libavutil 54.x (FFmpeg 2.7.6) |
2017-09-15 09:18 | kgv | Steps to Reproduce Updated | |
2017-09-15 09:28 | git | Note Added: 0070561 | |
2017-09-15 09:29 | abv | Note Added: 0070562 | |
2017-09-15 09:29 | abv | Assigned To | abv => bugmaster |
2017-09-15 09:29 | abv | Status | assigned => resolved |
2017-09-15 09:29 | abv | Status | resolved => reviewed |
2017-09-15 09:31 | abv | Relationship added | related to 0029113 |
2017-09-15 09:33 | kgv | Note Added: 0070563 | |
2017-09-15 11:16 | bugmaster | Note Added: 0070576 | |
2017-09-15 11:16 | bugmaster | Assigned To | bugmaster => abv |
2017-09-15 11:16 | bugmaster | Status | reviewed => feedback |
2017-09-21 21:53 | git | Note Added: 0070762 | |
2017-09-24 19:29 | git | Note Added: 0070814 | |
2017-09-24 19:29 | abv | Note Added: 0070815 | |
2017-09-24 19:29 | abv | Assigned To | abv => bugmaster |
2017-09-24 19:29 | abv | Status | feedback => reviewed |
2017-09-26 15:24 | bugmaster | Note Added: 0070878 | |
2017-09-26 15:24 | bugmaster | Status | reviewed => tested |
2017-09-26 15:24 | bugmaster | Test case number | => Not required |
2017-09-29 13:26 | bugmaster | Changeset attached | => occt master 746f3d7a |
2017-09-29 13:26 | bugmaster | Status | tested => verified |
2017-09-29 13:26 | bugmaster | Resolution | open => fixed |
2017-09-29 17:11 | git | Note Added: 0071031 | |
2017-09-29 17:11 | git | Note Added: 0071032 | |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |