0029112: Visualization - compilation fails on Ubuntu with libavutil 54.x (FFmpeg 2.7.6)

Offending macro is undefined to allow compilation with libavutil 54.x